2007-07-15 10:12  upi

	* bin/upipang.pl: Proper website launching for Windows.  High level
	  table is now saved properly.

2007-06-28 09:10  upi

	* ChangeLog, VERSION, bin/upipang.pl: Bumped version to 1.2.

2007-06-28 09:10  upi

	* INSTALL: Basic installation instructions.

2007-06-28 08:56  upi

	* bin/upipang.pl: Some minor tweaks.  Balls smaller than level 3 no
	  longer have magic in them.  Fixed a bug related to multiple slow
	  effects.  Slow effect no longer survives in Challenge Mode.
	  Eliminated some SDL warning messages.  Added TutorialGame (one on
	  one with a specific kind of ball).

2007-06-28 08:47  upi

	* data/: Balls-Upside128.png, Balls-Upside64.png: Fixed background
	  green

2007-06-28 08:46  upi

	* data/bonus.png: New bonus graphics

2007-04-03 21:35  upi

	* bin/upipang.pl: Added UpsideDownBall, minor fixes.

2007-04-03 21:33  upi

	* data/: Balls-Upside128.png, Balls-Upside16.png,
	  Balls-Upside32.png, Balls-Upside64.png, Balls-Upside96.png: Added
	  UpsideDownBall

2007-01-04 10:38  upi

	* VERSION, bin/upipang.pl: Separate high score tables for Panic and
	  Challenge modes.  More challenge levels.

2007-01-03 23:31  upi

	* bin/upipang.pl: Show website at exit.

2007-01-03 19:51  upi

	* bin/upipang.pl, data/bonus.png: Added "Matrix effect": slows the
	  game down for 15 sec.

2007-01-01 09:52  upi

	* ChangeLog, VERSION: Bumped version number to 1.0

2007-01-01 09:50  upi

	* bin/upipang.pl: Quick fix for the Demo before 1.0

2006-12-31 16:32  upi

	* bin/upipang.pl: Added option for weapon durations.

2006-12-31 15:49  upi

	* bin/upipang.pl: Some more fixes for Challenge mode.

2006-12-31 10:54  upi

	* bin/upipang.pl: Fixes for challenge mode.  Better scoreboard
	  layout for very small screen heights.

2006-12-30 19:45  upi

	* bin/upipang.pl: Improved High Score table.  Menu items now show
	  tool tips at the bottom of the screen.

2006-12-30 12:33  upi

	* bin/upipang.pl: Player can choose Panic or Challenge game from