@@ -7,7 +7,7 @@
       "Elio Blanca <eblanca76@users.sourceforge.net>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "Module::Build version 0.3901, CPAN::Meta::Converter version 2.113640",
+   "generated_by" : "Module::Build version 0.38, CPAN::Meta::Converter version 2.112150",
    "license" : [
       "open_source"
    ],
@@ -17,11 +17,6 @@
    },
    "name" : "Games-PangZero",
    "prereqs" : {
-      "build" : {
-         "requires" : {
-            "Capture::Tiny" : 0
-         }
-      },
       "configure" : {
          "requires" : {
             "Module::Build" : "0.38"
@@ -39,7 +34,7 @@
    "provides" : {
       "Games::PangZero" : {
          "file" : "lib/Games/PangZero.pm",
-         "version" : "1.3"
+         "version" : "1.4"
       },
       "Games::PangZero::Ball" : {
          "file" : "lib/Games/PangZero/Ball.pm",
@@ -223,5 +218,5 @@
          "url" : "http://github.com/kthakore/pangzero"
       }
    },
-   "version" : "1.3"
+   "version" : "1.4"
 }
